manifests/0000_50_olm_08-lifecycle-controller.networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: lifecycle-controller
  namespace: openshift-operator-lifecycle-manager
  annotations:
    include.release.openshift.io/self-managed-high-availability: "true"
    release.openshift.io/feature-set: "TechPreviewNoUpgrade"
    capability.openshift.io/name: "OperatorLifecycleManager"
spec:
  podSelector:
    matchLabels:
      app: olm-lifecycle-controller
  ingress:
    - ports:
        - port: 8443
          protocol: TCP
  egress:
    - ports:
        - port: 6443
          protocol: TCP
    - ports:
        - port: 53
          protocol: TCP
        - port: 53
          protocol: UDP
        - port: 5353
          protocol: TCP
        - port: 5353
          protocol: UDP
  policyTypes:
    - Ingress
    - Egress
